# plasma-wallpapers-xml

./: CMakeLists.txt  README.md  plasma-wallpapers-xml.spec
imagepackage/: metadata.desktop  metadata.json
imagepackage/contents/config/: main.xml
imagepackage/contents/ui/: ColorOption.qml  ConfigGeneral.qml  FallbackMessage.qml  ImageComponent.qml  ResizeComboBox.qml  ThumbnailsComponent.qml  WallpaperDelegate.qml  WallpaperGridView.qml  config.qml  main.qml
plugin/: CMakeLists.txt  imagebackend.cpp  imagebackend.h  imageplugin.cpp  imageplugin.h  qmldir  slidefiltermodel.cpp  slidemodel.cpp
plugin/autotests/: CMakeLists.txt  constant.h  test_finder.cpp  test_imageproxymodel.cpp  test_model.cpp  test_packagelistmodel.cpp  test_slidefiltermodel.cpp  test_slidemodel.cpp  test_xmlfinder.cpp  test_xmlimagelistmodel.cpp  tst_imagebackend.cpp  tst_imagebackend.qml
plugin/autotests/testdata/alternate/: dummy.xml
plugin/autotests/testdata/alternate/openSUSEdefault/: metadata.desktop
plugin/autotests/testdata/default/xml/: lightdark.xml  timeofday.xml
plugin/backend/: imagebackend.cpp  imagebackend.h  slideshowbackend.cpp  slideshowbackend.h  xmlslideshowupdatetimer.cpp  xmlslideshowupdatetimer.h
plugin/backend/finder/: imagefinder.cpp  imagesizefinder.cpp  packagefinder.cpp  packagefinder.h  xmlfinder.cpp
plugin/backend/model/: abstractimagelistmodel.cpp  imagelistmodel.cpp  imagelistmodel.h  imageproxymodel.cpp  packagelistmodel.cpp  packagelistmodel.h  slidefiltermodel.cpp  xmlpreviewgenerator.cpp
plugin/backend/provider/: packageimageprovider.cpp  xmlimageprovider.h
plugin/finder/: distance.cpp  distance.h  findsymlinktarget.h  imagefinder.cpp  imagefinder.h  imagesizefinder.cpp  imagesizefinder.h  packagefinder.cpp  packagefinder.h  suffixcheck.cpp  xmlfinder.cpp  xmlfinder.h
plugin/model/: abstractimagelistmodel.cpp  abstractimagelistmodel.h  imagelistmodel.cpp  imagelistmodel.h  imageproxymodel.cpp  imageproxymodel.h  packagelistmodel.cpp  packagelistmodel.h  slidefiltermodel.cpp  slidefiltermodel.h  slidemodel.cpp  slidemodel.h  xmlimagelistmodel.cpp  xmlimagelistmodel.h  xmlpreviewgenerator.cpp  xmlpreviewgenerator.h
plugin/provider/: packageimageprovider.cpp  packageimageprovider.h  xmlimageprovider.cpp
slideshowpackage/: metadata.desktop  metadata.json
slideshowpackage/contents/ui/: ConfigGeneral.qml  IntervalSpinBox.qml  SlideshowComponent.qml  SlideshowMode.qml  main.qml
